--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -412,3 +412,31 @@
    "metadata": {},
    "source": [
     "### 3.3 Cost Function\n",
+    "\n",
+    "Recall that in linear regression, the cost function was $J(\\theta) = \\frac{1}{m} \\sum_{i = 1}^m \\left(\\frac{1}{2} (h_{\\theta}(x^{(i)}) - y^{(i)})^2\\right)$.\n",
+    "We can think of the term $\\frac{1}{2} (h_{\\theta}(x^{(i)}) - y^{(i)})^2$ as a measure of how close $h_{\\theta}(x^{(i)})$ is to $y^{(i)}$.\n",
+    "This works well for linear regression where both $h_{\\theta}(x^{(i)})$ and $y^{(i)}$ can be any numbers.\n",
+    "\n",
+    "In logistic regression where $h_{\\theta}(x^{(i)})$ is between $0$ and $1$ and $y^{(i)}$ can be either $0$ or $1$, this doesn't work very well.\n",
+    "In general, we need to come up with a function $\\mathrm{cost}(h_{\\theta}(x), y)$ that somehow measures the \"closeness\" of $h_{\\theta}(x)$ to $y$.\n",
+    "The cost function for logistic regression has the following form:\n",
+    "\n",
+    "\\begin{align}\n",
+    "    \\mathrm{cost}(h_{\\theta}(x), y) &=\n",
+    "        \\begin{cases}\n",
+    "            -\\log (h_{\\theta}(x)) & \\text{if } y = 1 \\\\\n",
+    "            -\\log (1 - h_{\\theta}(x)) & \\text{if } y = 0.\n",
+    "        \\end{cases}\n",
+    "\\end{align}\n",
+    "\n",
+    "This cost function has a desirable property that (you can check this for yourself!):\n",
+    "- $\\mathrm{cost}(h_{\\theta}(x), y) = 0$ if $y = 1$ and $h_{\\theta}(x) = 1$,\n",
+    "- $\\mathrm{cost}(h_{\\theta}(x), y) \\to \\infty$ if $y = 1$ and $h_{\\theta}(x) \\to 0$,\n",
+    "- $\\mathrm{cost}(h_{\\theta}(x), y) = 0$ if $y = 0$ and $h_{\\theta}(x) = 0$, and\n",
+    "- $\\mathrm{cost}(h_{\\theta}(x), y) \\to \\infty$ if $y = 0$ and $h_{\\theta}(x) \\to 1$.\n",
+    "\n",
+    "This means that an algorithm is penalised by $0$ if it gets the classification right, but by a very large cost if it gets it wrong."
+   ]
+  },
+  {
+   "cell_type": "markdown",
