--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -440,3 +440,28 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4 Simplified Cost Function\n",
+    "\n",
+    "The cost function\n",
+    "\\begin{align}\n",
+    "    \\mathrm{cost}(h_{\\theta}(x), y) &=\n",
+    "        \\begin{cases}\n",
+    "            -\\log (h_{\\theta}(x)) & \\text{if } y = 1 \\\\\n",
+    "            -\\log (1 - h_{\\theta}(x)) & \\text{if } y = 0\n",
+    "        \\end{cases}\n",
+    "\\end{align}\n",
+    "is quite clunky to work with.\n",
+    "\n",
+    "It turns out that we can write it in one expression as\n",
+    "\\begin{align}\n",
+    "    \\mathrm{cost}(h_{\\theta}(x), y) &= -y \\log (h_{\\theta}(x)) - (1 - y) \\log (1 - h_{\\theta}(x)).\n",
+    "\\end{align}\n",
+    "\n",
+    "Check for yourself that, as required:\n",
+    "- if we substitute $y = 1$ to the simplified cost, we obtain $(-\\log (h_{\\theta}(x)))$ and\n",
+    "- if we substitute $y = 0$ to the simplified cost, we obtain $(-\\log (1 - h_{\\theta}(x)))$.\n",
+    "\n",
+    "Hence, given the training data $\\{(x^{(1)}, y^{(1)}), (x^{(2)}, y^{(2)}), \\dotsc, (x^{(m)}, y^{(m)})\\}$, total cost is:\n",
+    "\\begin{align}\n",
