--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -465,3 +465,33 @@
     "\n",
     "Hence, given the training data $\\{(x^{(1)}, y^{(1)}), (x^{(2)}, y^{(2)}), \\dotsc, (x^{(m)}, y^{(m)})\\}$, total cost is:\n",
     "\\begin{align}\n",
+    "    J(\\theta) &= \\frac{1}{m} \\sum_{i = 1}^m \\mathrm{cost}(h_{\\theta}(x^{(i)}), y^{(i)}) \\\\\n",
+    "    &= \\frac{1}{m} \\sum_{i = 1}^m \\left[ -y^{(i)} \\log (h_{\\theta}(x^{(i)})) - (1 - y^{(i)}) \\log (1 - h_{\\theta}(x^{(i)})) \\right]. && \\text{(use the simplified cost)}\n",
+    "\\end{align}\n",
+    "\n",
+    "To find the parameters $\\theta$, we will minimize $J(\\theta)$ with respect to $\\theta$.\n",
+    "\n",
+    "After this optimization, to make a prediction given a new $x$, we evaluate\n",
+    "\\begin{align}\n",
+    "    h_{\\theta}(x) = \\frac{1}{1 + e^{-\\theta^T x}},\n",
+    "\\end{align}\n",
+    "and predict $y = 1$ if $h_{\\theta}(x) \\geq 0.5$ and predict $y = 0$ if $h_{\\theta}(x) < 0.5$.\n",
+    "\n",
+    "Your task now is to implement a function that returns $J(\\theta)$ given the training data $\\{(x^{(1)}, y^{(1)}), (x^{(2)}, y^{(2)}), \\dotsc, (x^{(m)}, y^{(m)})\\}$ in the form of a matrix $X$ and vector $y$ and the parameter vector $\\theta$:\n",
+    "\\begin{align}\n",
+    "    X &=\n",
+    "        \\begin{bmatrix}\n",
+    "            1 & x_1^{(1)} & x_2^{(1)} & \\cdots & x_n^{(1)} \\\\\n",
+    "            1 & x_1^{(2)} & x_2^{(2)} & \\cdots & x_n^{(2)} \\\\\n",
+    "            \\vdots & & \\ddots & & \\vdots \\\\\n",
+    "            1 & x_1^{(m)} & x_2^{(m)} & \\cdots & x_n^{(m)} \\\\\n",
+    "        \\end{bmatrix} &&\\text{and}\\\\\n",
+    "    y &= \n",
+    "        \\begin{bmatrix}\n",
+    "            y^{(1)} \\\\\n",
+    "            y^{(2)} \\\\\n",
+    "            \\vdots \\\\\n",
+    "            y^{(m)}\n",
+    "        \\end{bmatrix},\n",
+    "\\end{align}\n",
+    "where $n$ is the number of features and $m$ is the number of examples."
