kernel: Move REPEAT_BYTE definition into linux/kernel.h

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -495,3 +495,31 @@
     "        \\end{bmatrix},\n",
     "\\end{align}\n",
     "where $n$ is the number of features and $m$ is the number of examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# complete the code here before running this cell\n",
+    "def calculate_cost(X, y, theta):\n",
+    "    \"\"\"\n",
+    "    Implement the cost function explained above.\n",
+    "\n",
+    "    Arguments:\n",
+    "    X -- training data, of size (number of samples, number of features)\n",
+    "    y -- true \"label\" vector, of size (number of samples, 1)\n",
+    "    theta -- weights, of size (number of features, 1)\n",
+    "\n",
+    "    Return:\n",
+    "    cost -- cost for logistic regression, a scalar\n",
+    "    \"\"\"\n",
+    "    m, n = X.shape          # m is number of samples, n is number of features\n",
+    "    \n",
+    "    Z = X @ theta           # linear function above. @ is a Python operator for matrix multiplication, \n",
+    "                            # it behaves similar to np.matmul or np.dot with 2D arrays. A @ B is np.matmul(A,B)                  \n",
+    "    H = 'write code here'                               \n",
