--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -523,3 +523,35 @@
     "    Z = X @ theta           # linear function above. @ is a Python operator for matrix multiplication, \n",
     "                            # it behaves similar to np.matmul or np.dot with 2D arrays. A @ B is np.matmul(A,B)                  \n",
     "    H = 'write code here'                               \n",
+    "\n",
+    "    cost = -np.mean(y * np.log(H) + (1 - y) * np.log(1 - H))\n",
+    "    \n",
+    "    return cost  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Once you finish the code above, run this cell and compared your output to the expected output\n",
+    "theta = np.zeros((3, 1))    # initialize theta to be all 0s\n",
+    "calculate_cost(X, y, theta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td>**Cost**</td>\n",
+    "    <td> 0.69314718055994529</td> \n",
+    "  </tr>\n",
