--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -555,3 +555,34 @@
     "    <td>**Cost**</td>\n",
     "    <td> 0.69314718055994529</td> \n",
     "  </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.5 Gradient of the Cost Function\n",
+    "\n",
+    "In order to perform gradient descent on the total cost $J(\\theta)$ we need to calculate the partial derivatives of $J(\\theta)$ with respect to each $\\theta_j$.\n",
+    "\n",
+    "The derivative of the cost function turns out to be\n",
+    "\\begin{align}\n",
+    "    \\frac{\\partial J(\\theta)}{\\partial \\theta_j} = \\frac{1}{m} \\sum_{i = 1}^m (h_{\\theta}(x^{(i)}) - y^{(i)}) x_j^{(i)}.\n",
+    "\\end{align}\n",
+    "\n",
+    "You can derive this for yourself but for now, just take this on trust.\n",
+    "\n",
+    "Given the vectorised representation of the training data, we can calculate all the partial derivatives at once.\n",
+    "The resulting vector of partial derivatives is called the gradient of $J(\\theta)$ with respect to $\\theta$, denoted $\\nabla_{\\theta} J$:\n",
+    "\\begin{align}\n",
+    "    \\nabla_{\\theta} J =\n",
+    "    \\begin{bmatrix}\n",
+    "        \\frac{\\partial J(\\theta)}{\\partial \\theta_0} \\\\\n",
+    "        \\frac{\\partial J(\\theta)}{\\partial \\theta_1} \\\\\n",
+    "        \\vdots \\\\\n",
+    "        \\frac{\\partial J(\\theta)}{\\partial \\theta_n}\n",
+    "    \\end{bmatrix} =\n",
+    "    \\frac{1}{m} X^T (H - y),\n",
+    "\\end{align}\n",
+    "where $H$ is a vector of the hypothesis outputs:\n",
