--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -586,3 +586,29 @@
     "    \\frac{1}{m} X^T (H - y),\n",
     "\\end{align}\n",
     "where $H$ is a vector of the hypothesis outputs:\n",
+    "\\begin{align}\n",
+    "    H =\n",
+    "    \\begin{bmatrix}\n",
+    "        h_{\\theta}(x^{(1)}) \\\\\n",
+    "        h_{\\theta}(x^{(2)}) \\\\\n",
+    "        \\vdots \\\\\n",
+    "        h_{\\theta}(x^{(m)})\n",
+    "    \\end{bmatrix}.\n",
+    "\\end{align}\n",
+    "\n",
+    "Your task now is to implement a function that takes in a matrix $X$, a vector $y$, and a vector $\\theta$ and returns the vector $\\nabla_{\\theta} J(\\theta)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# complete the code here before running this cell\n",
+    "def calculate_gradient(X, y, theta):\n",
+    "    \"\"\"\n",
+    "    Implement the gradient function above.\n",
+    "    \n",
