tcm_fc: Do not report target role when target is not defined

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -612,3 +612,33 @@
     "    \"\"\"\n",
     "    Implement the gradient function above.\n",
     "    \n",
+    "    Arguments: same as calculate_cost function\n",
+    "    \n",
+    "    Return:\n",
+    "    dtheta: a vector holding the gradient for all theta_j, of size (number of features, 1)\n",
+    "    \"\"\"\n",
+    "    m, n = X.shape                           # m is number of samples, n is number of features\n",
+    "    \n",
+    "    Z = X @ theta                            # linear function above \n",
+    "    H = sigmoid(Z)\n",
+    "    \n",
+    "    dtheta = 'write code here'\n",
+    "    \n",
+    "    assert dtheta.shape == (n, 1)            # making sure the shape of dtheta is correct\n",
+    "    \n",
+    "    return dtheta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Once you finish the code above, run this cell and compared your output to the expected output\n",
+    "theta = np.zeros((3, 1))\n",
+    "calculate_gradient(X, y, theta)"
+   ]
+  },
