--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -675,3 +675,45 @@
     "\n",
     "In the vectorized form, it would be:\n",
     "- Initialize $\\theta$\n",
+    "- Repeat until convergence:\n",
+    "    - Update $\\theta = \\theta - \\alpha \\cdot \\nabla_{\\theta} J(\\theta)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# complete the code here before running this cell\n",
+    "m, n = X.shape\n",
+    "num_iterations = 10000\n",
+    "learning_rate = 0.1\n",
+    "theta = np.ones((n,1))\n",
+    "cost_history = np.zeros(num_iterations)\n",
+    "\n",
+    "for i in range(num_iterations):\n",
+    "    dtheta = calculate_gradient(X, y, theta)\n",
+    "    theta = 'write code here'\n",
+    "    cost_history[i] = calculate_cost(X, y, theta)\n",
+    "\n",
+    "theta_optimal = theta.copy()    \n",
+    "fig, ax = plt.subplots(1, 1)\n",
+    "ax.set_xlabel('Gradient descent step')\n",
+    "ax.set_ylabel('$J(\\\\theta)$')\n",
+    "ax.grid(True)\n",
+    "ax.plot(cost_history)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Once you finish the code above, run this cell and compared your output to the expected output\n",
