--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -717,3 +717,48 @@
    "outputs": [],
    "source": [
     "# Once you finish the code above, run this cell and compared your output to the expected output\n",
+    "print('The final theta is: \\n {}'.format(theta_optimal))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td>**Optimal theta**</td>\n",
+    "    <td> -15.26656328 &emsp; 1.27230783 &emsp; 1.21435648</td> \n",
+    "  </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.7 Make predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# complete the code here before running this cell\n",
+    "def predict(X, theta):\n",
+    "    \"\"\"\n",
+    "    Predict label of X using parameters theta.\n",
+    "    \n",
+    "    Return:\n",
+    "    y_hat -- predicted value given X, of size (number of samples, 1)\n",
+    "    \"\"\"\n",
+    "    m, n = X.shape\n",
+    "    Z = X @ theta                   \n",
+    "    H = sigmoid(Z)\n",
