Small documentation fix.

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -762,3 +762,29 @@
     "    m, n = X.shape\n",
     "    Z = X @ theta                   \n",
     "    H = sigmoid(Z)\n",
+    "    \n",
+    "    'write code here. It might be a few lines'\n",
+    "            \n",
+    "    return y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Once you finish the code above, run this cell and compared your output to the expected output\n",
+    "train_accuracy = np.mean(1 - np.abs(predict(X, theta_optimal) - y))\n",
+    "print('Train accuracy: {} %'.format(train_accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
+    "\n",
