--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -823,3 +823,34 @@
     }
    ],
    "source": [
+    "boundary_xs = np.array([np.min(X[:, 1]) - 0.2, np.max(X[:, 1]) + 0.2])\n",
+    "boundary_ys = (-1. / theta_optimal[2]) * (theta_optimal[0] + theta_optimal[1] * boundary_xs)\n",
+    "plot_data()\n",
+    "plt.plot(boundary_xs, boundary_ys, 'b-', label='Decision Boundary')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4 Test Data and Generalization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Machine Learning, it is important to separate the training dataset and the test dataset. You want to fit a model on the training set and validate the performance on an untampered test set.\n",
+    "\n",
+    "Let's load the test dataset by running the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
