Remove unnecessary brackets

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -926,3 +926,29 @@
      "metadata": {},
      "output_type": "display_data"
     }
+   ],
+   "source": [
+    "plot_data()\n",
+    "plt.scatter(X_test[:,1][y_test[:, 0] == 0], X_test[:,2][y_test[:, 0] == 0], color='#8B0000', marker = 'x', s=70,\n",
+    "                        alpha=1, label='Test not admitted')\n",
+    "plt.scatter(X_test[:,1][y_test[:, 0] == 1], X_test[:,2][y_test[:, 0] == 1], color='#006400', marker = 'o', s=50,\n",
+    "                        alpha=1, label='Test admitted')\n",
+    "plt.plot(boundary_xs, boundary_ys, 'b-', label='Decision Boundary')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 5 Test Logistic Regression on the dating dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*This part of the exercise is advanced, you can do it at your own discretion.*"
