--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -978,3 +978,31 @@
     }
    ],
    "source": [
+    "dating_data = pd.read_csv('data/dating_data.csv', sep = ',', dtype='float')\n",
+    "\n",
+    "X_dating = dating_data[['age', 'height', 'income']].values\n",
+    "y_dating = dating_data['status_after_a_month'].values\n",
+    "\n",
+    "print('Shape of matrix X_dating is {}.'.format(X_dating.shape))\n",
+    "print('X_dating has {} samples.'.format(X_dating.shape[0]))\n",
+    "print('X_dating has {} features.'.format(X_dating.shape[1]))\n",
+    "\n",
+    "y_dating = y_dating.reshape(-1, 1)\n",
+    "\n",
+    "print('Shape of vector y_dating is {}.'.format(y_dating.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
