Fixed error in readme

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -1006,3 +1006,48 @@
        "        text-align: right;\n",
        "    }\n",
        "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>income</th>\n",
+       "      <th>status_after_a_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>60000.0</td>\n",
