--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -1150,3 +1150,36 @@
     "num_iterations = 10000\n",
     "learning_rate = 0.1\n",
     "theta = np.ones((n,1))\n",
+    "cost_history = np.zeros(num_iterations)\n",
+    "\n",
+    "for i in range(num_iterations):\n",
+    "    dtheta = calculate_gradient(X_dating_scaled, y_dating, theta)\n",
+    "    theta = theta - learning_rate * dtheta\n",
+    "    cost_history[i] = calculate_cost(X_dating_scaled, y_dating, theta)\n",
+    "\n",
+    "theta_dating_optimal = theta.copy()    \n",
+    "fig, ax = plt.subplots(1, 1)\n",
+    "ax.set_xlabel('Gradient descent step')\n",
+    "ax.set_ylabel('$J(\\\\theta)$')\n",
+    "ax.grid(True)\n",
+    "ax.plot(cost_history)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The final theta is: \n",
+      " [[ 3.10651144]\n",
+      " [ 0.08243962]\n",
+      " [-0.01192599]\n",
+      " [ 0.10328468]]\n"
+     ]
+    }
+   ],
