--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -1183,3 +1183,42 @@
      ]
     }
    ],
+   "source": [
+    "print('The final theta is: \\n {}'.format(theta_dating_optimal))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can compared the theta we have with the coefficients from the morning session."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train accuracy: 95.68533969010727 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_accuracy = np.mean(1 - np.abs(predict(X_dating_scaled, theta_dating_optimal) - y_dating))\n",
+    "print('Train accuracy: {} %'.format(train_accuracy * 100))"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
