modus-themes: sync latest updates

--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -71,3 +71,41 @@
     "\n",
     "In binary classification, the label $y$ can take on two values: $0$ or $1$.\n",
     "$0$ represents the \"negative class\" and $1$ represents the \"positive class\".\n",
+    "Given an input $x$ we would like to know which class it belongs to.\n",
+    "Some examples logistic regression can be applied to are:\n",
+    "- Given an email, predict whether it was \"spam\" or \"not spam\"\n",
+    "- Given an online transaction, predict whether it was \"fraud\" or \"not fraud\"\n",
+    "- Given a tumor data, predict whether it is \"malignant\" or \"benign\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suppose that you are the administrator of a university department and you want to determine each applicant’s chance of admission based on their results on two exams. You have historical data from previous applicants that you can use as a training set for logistic regression. For each training example, you have the applicant’s scores on two exams and the admissions decision.\n",
+    "\n",
+    "Let's get more familiar with the dataset. Load the data by running the following code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
