--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -109,3 +109,30 @@
        "        vertical-align: top;\n",
        "    }\n",
        "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Exam1_score</th>\n",
+       "      <th>Exam2_score</th>\n",
+       "      <th>Admitted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.462366</td>\n",
+       "      <td>7.802469</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.028671</td>\n",
+       "      <td>4.389500</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.584741</td>\n",
+       "      <td>7.290220</td>\n",
+       "      <td>0</td>\n",
