--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -167,3 +167,24 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "data = pd.read_csv('data/exam_data.txt', sep = ',', header=None)\n",
+    "data.columns = ['Exam1_score', 'Exam2_score', 'Admitted']\n",
+    "\n",
+    "# This is the code to display the top samples in the dataset. You can change number to choose how many to display \n",
+    "data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
