--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -315,3 +315,35 @@
     "It takes in a number and squishes it to be between $0$ and $1$.\n",
     "The sigmoid function has the following form:\n",
     "$$ \\mathrm{sigmoid}(z)=\\frac{1}{1+e^{−z}} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sigmoid(z):\n",
+    "    return 1 / (1 + np.exp(-z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Just run this cell. It will plot the function\n",
+    "z = np.arange(-10, 10, 0.1)\n",
+    "fig, ax = plt.subplots(1, 1)\n",
+    "ax.plot(z, sigmoid(z))\n",
+    "ax.set_xlabel('$z$')\n",
+    "ax.set_ylabel('sigmoid($z$)')\n",
+    "ax.set_title('Sigmoid Function')\n",
+    "ax.grid()"
+   ]
+  },
