--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -437,3 +437,40 @@
     "This means that an algorithm is penalised by $0$ if it gets the classification right, but by a very large cost if it gets it wrong."
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4 Simplified Cost Function\n",
+    "\n",
+    "The cost function\n",
+    "\\begin{align}\n",
+    "    \\mathrm{cost}(h_{\\theta}(x), y) &=\n",
+    "        \\begin{cases}\n",
+    "            -\\log (h_{\\theta}(x)) & \\text{if } y = 1 \\\\\n",
+    "            -\\log (1 - h_{\\theta}(x)) & \\text{if } y = 0\n",
+    "        \\end{cases}\n",
+    "\\end{align}\n",
+    "is quite clunky to work with.\n",
+    "\n",
+    "It turns out that we can write it in one expression as\n",
+    "\\begin{align}\n",
+    "    \\mathrm{cost}(h_{\\theta}(x), y) &= -y \\log (h_{\\theta}(x)) - (1 - y) \\log (1 - h_{\\theta}(x)).\n",
+    "\\end{align}\n",
+    "\n",
+    "Check for yourself that, as required:\n",
+    "- if we substitute $y = 1$ to the simplified cost, we obtain $(-\\log (h_{\\theta}(x)))$ and\n",
+    "- if we substitute $y = 0$ to the simplified cost, we obtain $(-\\log (1 - h_{\\theta}(x)))$.\n",
+    "\n",
+    "Hence, given the training data $\\{(x^{(1)}, y^{(1)}), (x^{(2)}, y^{(2)}), \\dotsc, (x^{(m)}, y^{(m)})\\}$, total cost is:\n",
+    "\\begin{align}\n",
+    "    J(\\theta) &= \\frac{1}{m} \\sum_{i = 1}^m \\mathrm{cost}(h_{\\theta}(x^{(i)}), y^{(i)}) \\\\\n",
+    "    &= \\frac{1}{m} \\sum_{i = 1}^m \\left[ -y^{(i)} \\log (h_{\\theta}(x^{(i)})) - (1 - y^{(i)}) \\log (1 - h_{\\theta}(x^{(i)})) \\right]. && \\text{(use the simplified cost)}\n",
+    "\\end{align}\n",
+    "\n",
+    "To find the parameters $\\theta$, we will minimize $J(\\theta)$ with respect to $\\theta$.\n",
+    "\n",
+    "After this optimization, to make a prediction given a new $x$, we evaluate\n",
+    "\\begin{align}\n",
+    "    h_{\\theta}(x) = \\frac{1}{1 + e^{-\\theta^T x}},\n",
+    "\\end{align}\n",
