--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -503,3 +503,25 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "def calculate_cost(X, y, theta):\n",
+    "    \"\"\"\n",
+    "    Implement the cost function explained above.\n",
+    "\n",
+    "    Arguments:\n",
+    "    X -- training data, of size (number of samples, number of features)\n",
+    "    y -- true \"label\" vector, of size (number of samples, 1)\n",
+    "    theta -- weights, of size (number of features, 1)\n",
+    "\n",
+    "    Return:\n",
+    "    cost -- cost for logistic regression, a scalar\n",
+    "    \"\"\"\n",
+    "    m, n = X.shape          # m is number of samples, n is number of features\n",
+    "    \n",
+    "    Z = X @ theta           # linear function above. @ is a Python operator for matrix multiplication, \n",
+    "                            # it behaves similar to np.matmul or np.dot with 2D arrays. A @ B is np.matmul(A,B)\n",
+    "    H = sigmoid(Z)\n",
+    "    \n",
+    "    cost = -np.mean(y * np.log(H) + (1 - y) * np.log(1 - H))\n",
+    "    \n",
+    "    return cost"
