--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -525,3 +525,48 @@
     "    cost = -np.mean(y * np.log(H) + (1 - y) * np.log(1 - H))\n",
     "    \n",
     "    return cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Run this cell and compared your output to the expected output\n",
+    "theta = np.zeros((3, 1))    # initialize theta to be all 0s\n",
+    "calculate_cost(X, y, theta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td>**Cost**</td>\n",
+    "    <td> 0.69314718055994529</td> \n",
+    "  </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.5 Gradient of the Cost Function\n",
+    "\n",
+    "In order to perform gradient descent on the total cost $J(\\theta)$ we need to calculate the partial derivatives of $J(\\theta)$ with respect to each $\\theta_j$.\n",
+    "\n",
+    "The derivative of the cost function turns out to be\n",
+    "\\begin{align}\n",
+    "    \\frac{\\partial J(\\theta)}{\\partial \\theta_j} = \\frac{1}{m} \\sum_{i = 1}^m (h_{\\theta}(x^{(i)}) - y^{(i)}) x_j^{(i)}.\n",
+    "\\end{align}\n",
+    "\n",
+    "You can derive this for yourself but for now, just take this on trust.\n",
