sets of complex types

--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -570,3 +570,43 @@
     "\\end{align}\n",
     "\n",
     "You can derive this for yourself but for now, just take this on trust.\n",
+    "\n",
+    "Given the vectorised representation of the training data, we can calculate all the partial derivatives at once.\n",
+    "The resulting vector of partial derivatives is called the gradient of $J(\\theta)$ with respect to $\\theta$, denoted $\\nabla_{\\theta} J$:\n",
+    "\\begin{align}\n",
+    "    \\nabla_{\\theta} J =\n",
+    "    \\begin{bmatrix}\n",
+    "        \\frac{\\partial J(\\theta)}{\\partial \\theta_0} \\\\\n",
+    "        \\frac{\\partial J(\\theta)}{\\partial \\theta_1} \\\\\n",
+    "        \\vdots \\\\\n",
+    "        \\frac{\\partial J(\\theta)}{\\partial \\theta_n}\n",
+    "    \\end{bmatrix} =\n",
+    "    \\frac{1}{m} X^T (H - y),\n",
+    "\\end{align}\n",
+    "where $H$ is a vector of the hypothesis outputs:\n",
+    "\\begin{align}\n",
+    "    H =\n",
+    "    \\begin{bmatrix}\n",
+    "        h_{\\theta}(x^{(1)}) \\\\\n",
+    "        h_{\\theta}(x^{(2)}) \\\\\n",
+    "        \\vdots \\\\\n",
+    "        h_{\\theta}(x^{(m)})\n",
+    "    \\end{bmatrix}.\n",
+    "\\end{align}\n",
+    "\n",
+    "Your task now is to implement a function that takes in a matrix $X$, a vector $y$, and a vector $\\theta$ and returns the vector $\\nabla_{\\theta} J(\\theta)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_gradient(X, y, theta):\n",
+    "    \"\"\"\n",
+    "    Implement the gradient function above.\n",
+    "    \n",
+    "    Arguments: same as calculate_cost function\n",
