prepare new version

--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -610,3 +610,39 @@
     "    Implement the gradient function above.\n",
     "    \n",
     "    Arguments: same as calculate_cost function\n",
+    "    \n",
+    "    Return:\n",
+    "    dtheta: a vector holding the gradient for all theta_j, of size (number of features, 1)\n",
+    "    \"\"\"\n",
+    "    m, n = X.shape\n",
+    "    \n",
+    "    Z = X @ theta\n",
+    "    H = sigmoid(Z)\n",
+    "    \n",
+    "    dtheta = (1. / m) * X.T @ (H - y)\n",
+    "    \n",
+    "    assert dtheta.shape == (n, 1)\n",
+    "    \n",
+    "    return dtheta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Run this cell and compared your output to the expected output\n",
+    "theta = np.zeros((3, 1))\n",
+    "calculate_gradient(X, y, theta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
+    "\n",
