staging: comedi: check s->async for poll(), read() and write()

--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -646,3 +646,33 @@
     "**Expected Output**: \n",
     "\n",
     "\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td>**Gradients for theta**</td>\n",
+    "    <td> -0.1 &emsp; -1.20092166 &emsp; -1.12628422</td> \n",
+    "  </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 3.6 Optimization of $J(\\theta)$\n",
+    "\n",
+    "We are now ready to perform gradient descent to minimize $J(\\theta)$ with respect to $\\theta$.\n",
+    "The pseudocode for gradient is simply:\n",
+    "- Initialize $\\theta$\n",
+    "- Repeat until convergence:\n",
+    "    - Update $\\theta_j = \\theta_j - \\alpha \\cdot \\frac{\\partial J(\\theta)}{\\partial \\theta_j}$ for all $\\theta_j$\n",
+    "where $\\alpha$ is the learning rate.\n",
+    "\n",
+    "In the vectorized form, it would be:\n",
+    "- Initialize $\\theta$\n",
+    "- Repeat until convergence:\n",
+    "    - Update $\\theta = \\theta - \\alpha \\cdot \\nabla_{\\theta} J(\\theta)$"
+   ]
+  },
