:arrow_up: find-and-replace

--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -676,3 +676,29 @@
     "    - Update $\\theta = \\theta - \\alpha \\cdot \\nabla_{\\theta} J(\\theta)$"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_iterations = 10000\n",
+    "learning_rate = 0.1\n",
+    "theta = np.ones((3,1))\n",
+    "cost_history = np.zeros(num_iterations)\n",
+    "\n",
+    "for i in range(num_iterations):\n",
+    "    dtheta = calculate_gradient(X, y, theta)\n",
+    "    theta = theta - learning_rate * dtheta\n",
+    "    cost_history[i] = calculate_cost(X, y, theta)\n",
+    "\n",
+    "theta_optimal = theta.copy()    \n",
+    "fig, ax = plt.subplots(1, 1)\n",
+    "ax.set_xlabel('Gradient descent step')\n",
+    "ax.set_ylabel('$J(\\\\theta)$')\n",
+    "ax.grid(True)\n",
+    "ax.plot(cost_history)\n",
+    "plt.show()"
+   ]
