Update Ring For Android.

--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -702,3 +702,28 @@
     "ax.plot(cost_history)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Run this cell and compared your output to the expected output\n",
+    "print('The final theta is: \\n {}'.format(theta_optimal))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td>**Optimal theta**</td>\n",
+    "    <td> -15.26656328 &emsp; 1.27230783 &emsp; 1.21435648</td> \n",
