--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -727,3 +727,39 @@
     "  <tr>\n",
     "    <td>**Optimal theta**</td>\n",
     "    <td> -15.26656328 &emsp; 1.27230783 &emsp; 1.21435648</td> \n",
+    "  </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.7 Make predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def predict(X, theta):\n",
+    "    \"\"\"\n",
+    "    Predict label of X using parameters theta.\n",
+    "    \n",
+    "    Return:\n",
+    "    y_hat -- predicted value given X, of size (number of samples, 1)\n",
+    "    \"\"\"\n",
+    "    m, n = X.shape\n",
+    "    Z = X @ theta                   \n",
+    "    H = sigmoid(Z)\n",
+    "    \n",
+    "    y_hat = np.zeros((m, 1))\n",
+    "    y_hat[H >= 0.5] = 1.\n",
+    "    y_hat[H < 0.5] = 0.\n",
+    "            \n",
+    "    return y_hat"
+   ]
