--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -763,3 +763,34 @@
     "            \n",
     "    return y_hat"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Run this cell and compared your output to the expected output\n",
+    "train_accuracy = np.mean(1 - np.abs(predict(X, theta_optimal) - y))\n",
+    "print('Train accuracy: {} %'.format(train_accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td>**Train accuracy**</td>\n",
+    "    <td> 89% </td> \n",
+    "  </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
