--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -827,3 +827,39 @@
     "plt.show()"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4 Test Data and Generalization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Machine Learning, it is important to separate the training dataset and the test dataset. You want to fit a model on the training set and validate the performance on an untampered test set.\n",
+    "\n",
+    "Let's load the test dataset by running the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "testdata = pd.read_csv('data/exam_data_test.txt', sep = ',', header=None)\n",
+    "testdata.columns = ['Exam1_score', 'Exam2_score', 'Admitted']\n",
+    "\n",
+    "X_test = testdata[['Exam1_score', 'Exam2_score']].values\n",
+    "X_test = np.insert(X_test, 0, 1, axis=1)       # add column of 1s to the left\n",
+    "y_test = testdata['Admitted'].values\n",
+    "y_test = y_test.reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
