--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -863,3 +863,44 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 80.0 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_accuracy = np.mean(1 - np.abs(predict(X_test, theta_optimal) - y_test))\n",
+    "print('Test accuracy: {} %'.format(test_accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**As you can see, the accuracy on test set is only 80%, much smaller compared to training accuracy of 89%.**\n",
+    "\n",
+    "This is the problem of generalization. It means that the algorithm is not able to reliably predict target values for previously unseen data. Generalization problem can be caused by several reasons:\n",
+    "\n",
+    "- The algorithm tries too hard to identify all the information in the training data, including the irrelevant part (called noise), and fail miserably with the new test data which also comes with its own noise. We also say that the algorithm fails to capure the true relationship in the data\n",
+    "\n",
+    "\n",
+    "- The training data has other inherent bias or sample error, thus it doesn't represent the true nature of the problem\n",
+    "\n",
+    "\n",
+    "- In Machine Learning, we implicitly assume a relationship between the input data and output. But in some cases, this might not be true\n",
+    "\n",
+    "\n",
+    "To summarize:\n",
+    "\n",
+    "**A good Machine Learning model is not one that fits the training data perfectly, it is the one that performs well with unseen data.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
