--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -938,3 +938,36 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
+   },
+   "source": [
+    "## 5 Test Logistic Regression on the dating dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*This part of the exercise is advanced, you can do it at your own discretion.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we load in the data, which is a cleaned, subset version of the dating dataset you are familiar with."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of matrix X_dating is (8390, 3).\n",
+      "X_dating has 8390 samples.\n",
+      "X_dating has 3 features.\n",
+      "Shape of vector y_dating is (8390, 1).\n"
+     ]
