--- a/LogisticRegressionAnswers.ipynb
+++ b/LogisticRegressionAnswers.ipynb
@@ -1205,3 +1205,29 @@
    ],
    "source": [
     "train_accuracy = np.mean(1 - np.abs(predict(X_dating_scaled, theta_dating_optimal) - y_dating))\n",
+    "print('Train accuracy: {} %'.format(train_accuracy * 100))"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
