--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -44,3 +44,34 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "# the following line allows us to output plots in the notebook\n",
+    "%matplotlib inline \n",
+    "\n",
+    "import scipy                      # fundamental package that contains all important mathematical functions\n",
+    "import numpy as np                # fundamental package for scientific computing with Python\n",
+    "import pandas as pd               # fundamental dataframe package to wrangle a dataset in tabular form\n",
+    "import matplotlib.pyplot as plt   # famous library to plot graphs in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2 Overview of the Dataset\n",
+    "\n",
+    "### 2.1 Problem Statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recall that the task of supervised learning is to train a model to predict a label $y$ given an input $x = (x_1, x_2, \\dotsc, x_n)$ based a bunch of labelled examples $\\{(x^{(1)}, y^{(1)}), (x^{(2)}, y^{(2)}), \\dotsc, (x^{(m)}, y^{(m)})\\}$ which we call the **training data**.\n",
+    "\n",
+    "In binary classification, the label $y$ can take on two values: $0$ or $1$.\n",
+    "$0$ represents the \"negative class\" and $1$ represents the \"positive class\".\n",
+    "Given an input $x$ we would like to know which class it belongs to.\n",
+    "Some examples logistic regression can be applied to are:\n",
+    "- Given an email, predict whether it was \"spam\" or \"not spam\"\n",
+    "- Given an online transaction, predict whether it was \"fraud\" or \"not fraud\"\n",
