--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -162,3 +162,29 @@
        "2     3.584741     7.290220         0\n",
        "3     6.018260     8.630855         1\n",
        "4     7.903274     7.534438         1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('data/exam_data.txt', sep = ',', header=None)\n",
+    "data.columns = ['Exam1_score', 'Exam2_score', 'Admitted']\n",
+    "\n",
+    "# This is the code to display the top samples in the dataset. You can change number to choose how many to display \n",
+    "data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
