--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -254,3 +254,39 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remember from the linreg exercise and the sides, that in order to neatly calculate $\\theta_0$ into $\\theta$, we add a column of 1s to the left of $X$, to be feature $x_0$? We do it with the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Don't forget to run this cell\n",
+    "X = np.insert(X, 0, 1, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So now, technically, we can say $X$ has 3 features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3 Logistic Regression\n",
+    "\n",
+    "Recall that in linear regression, we had a hypothesis $h_{\\theta}(x)$ which allowed us to predict any number.\n",
+    "In binary classification, we would like to predict either $0$ or $1$.\n",
+    "For this purpose we will design a function $h_{\\theta}(x)$ which will output a number from $0$ to $1$:\n",
+    "- if $h_{\\theta}(x) \\geq 0.5$, predict \"$y = 1$\",\n",
+    "- if $h_{\\theta}(x) < 0.5$, predict \"$y = 0$\"."
+   ]
