--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -290,3 +290,26 @@
     "- if $h_{\\theta}(x) \\geq 0.5$, predict \"$y = 1$\",\n",
     "- if $h_{\\theta}(x) < 0.5$, predict \"$y = 0$\"."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "*Quick summary of how we will do logistic regression from slides, step by step:*\n",
+    "\n",
+    "- We initialize the parameters ($\\theta$)\n",
+    "\n",
+    "- Use them to calculate the Cost\n",
+    "\n",
+    "- Calculate the gradient\n",
+    " \n",
+    "- Use the gradient to update parameters in order to reduce the cost\n",
+    "\n",
+    "- Keep doing it a lot of times (maybe 10000 times), to obtain the \"optimal\" theta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
