HID: microsoft: do not use compound literal - fix build

--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -379,3 +379,38 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Although, as a matter of fact, we can import the sigmoid function from scipy for better application later. \n",
+    "# Just run this cell\n",
+    "from scipy.special import expit as sigmoid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*The maths below were already covered in the slides, but we repeat them here to help you review*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Hypothesis Function\n",
+    "\n",
+    "Recall that in linear regression the output of the hypothesis function was $\\theta_0 + \\theta_1 x_1 + \\theta_2 x_2 + \\cdots + \\theta_n x_n$ where $x = (x_1, x_2, \\dotsc, x_n)$ is the input and $\\theta = (\\theta_0, \\theta_1, \\dotsc, \\theta_n)$ are the parameters.\n",
+    "In logistic regression we slightly modify the hypothesis function to be\n",
+    "\n",
+    "\\begin{align}\n",
+    "    z_{\\theta}(x) &= \\theta_0 + \\theta_1 x_1 + \\theta_2 x_2 + \\cdots + \\theta_n x_n = \\theta^T x && \\text{(linear function)}\\\\\n",
+    "    h_{\\theta}(x) &= \\mathrm{sigmoid}(z_{\\theta}(x)) = \\mathrm{sigmoid}(\\theta^T x) && \\text{(using vector notation)} \\\\\n",
+    "    &= \\frac{1}{1 + e^{-\\theta^T x}}. && \\text{(using the definition of the sigmoid function)}\n",
+    "\\end{align}\n",
+    "\n",
+    "Since a sigmoid is a function whose output is between $0$ and $1$, $h_{\\theta}(x)$ will also output a number between $0$ and $1$ for a given input $x$.\n",
+    "We can interpret the output of the hypothesis function $h_{\\theta}(x)$ to be the probability that $y = 1$ given $x$."
+   ]
+  },
