--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -414,3 +414,26 @@
     "We can interpret the output of the hypothesis function $h_{\\theta}(x)$ to be the probability that $y = 1$ given $x$."
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Cost Function\n",
+    "\n",
+    "Recall that in linear regression, the cost function was $J(\\theta) = \\frac{1}{m} \\sum_{i = 1}^m \\left(\\frac{1}{2} (h_{\\theta}(x^{(i)}) - y^{(i)})^2\\right)$.\n",
+    "We can think of the term $\\frac{1}{2} (h_{\\theta}(x^{(i)}) - y^{(i)})^2$ as a measure of how close $h_{\\theta}(x^{(i)})$ is to $y^{(i)}$.\n",
+    "This works well for linear regression where both $h_{\\theta}(x^{(i)})$ and $y^{(i)}$ can be any numbers.\n",
+    "\n",
+    "In logistic regression where $h_{\\theta}(x^{(i)})$ is between $0$ and $1$ and $y^{(i)}$ can be either $0$ or $1$, this doesn't work very well.\n",
+    "In general, we need to come up with a function $\\mathrm{cost}(h_{\\theta}(x), y)$ that somehow measures the \"closeness\" of $h_{\\theta}(x)$ to $y$.\n",
+    "The cost function for logistic regression has the following form:\n",
+    "\n",
+    "\\begin{align}\n",
+    "    \\mathrm{cost}(h_{\\theta}(x), y) &=\n",
+    "        \\begin{cases}\n",
+    "            -\\log (h_{\\theta}(x)) & \\text{if } y = 1 \\\\\n",
+    "            -\\log (1 - h_{\\theta}(x)) & \\text{if } y = 0.\n",
+    "        \\end{cases}\n",
+    "\\end{align}\n",
+    "\n",
+    "This cost function has a desirable property that (you can check this for yourself!):\n",
